nuc/manifests/victoria-metrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    external-secrets/enable: "true"
    kubernetes.io/metadata.name: victoria-metrics
  name: victoria-metrics
spec:
  finalizers:
    - kubernetes
