nuc/manifests/victoria-metrics/victoria-metrics.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victoria-metrics

---
# Source: victoria-metrics-single/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: victoria-metrics
  labels: 
    app: server
    app.kubernetes.io/instance: vmsingle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-single
    app.kubernetes.io/version: v1.109.1
    helm.sh/chart: victoria-metrics-single-0.13.7
  name: vm-single
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8428
      protocol: TCP
      targetPort: http
  selector: 
    app: server
    app.kubernetes.io/instance: vmsingle
    app.kubernetes.io/name: victoria-metrics-single
---
# Source: victoria-metrics-single/templates/server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: victoria-metrics
  labels: 
    app: server
    app.kubernetes.io/instance: vmsingle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-single
    app.kubernetes.io/version: v1.109.1
    helm.sh/chart: victoria-metrics-single-0.13.7
  name: vm-single
spec:
  serviceName: vm-single
  selector:
    matchLabels: 
      app: server
      app.kubernetes.io/instance: vmsingle
      app.kubernetes.io/name: victoria-metrics-single
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels: 
        app: server
        app.kubernetes.io/instance: vmsingle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-metrics-single
        app.kubernetes.io/version: v1.109.1
        helm.sh/chart: victoria-metrics-single-0.13.7
    spec:
      containers:
        - name: vmsingle
          securityContext: 
            {}
          image: victoriametrics/victoria-metrics:v1.109.1
          imagePullPolicy: IfNotPresent
          args: 
            - --envflag.enable
            - --envflag.prefix=VM_
            - --httpListenAddr=:8428
            - --loggerFormat=json
            - --promscrape.config=/scrapeconfig/scrape.yml
            - --retentionPeriod=1
            - --storageDataPath=/storage
          ports:
            - name: http
              containerPort: 8428
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          livenessProbe: 
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: server-volume
              mountPath: /storage
            - name: scrapeconfig
              mountPath: /scrapeconfig
            
      securityContext: 
        {}
      serviceAccountName: vm-single
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 60
      volumes:
        - name: scrapeconfig
          configMap:
            name: vm-single-scrapeconfig
        
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: server-volume
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
